MCA App/Release/MCA Dev Org/src/objects/ACH_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>ACH_Batch__c</fullName>
        <label>ACH Batch</label>
        <referenceTo>ACH_Batch__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACH_Transaction__c</fullName>
        <label>ACH Transaction</label>
        <referenceTo>ACH_Transaction__c</referenceTo>
        <relationshipLabel>Fees List</relationshipLabel>
        <relationshipName>ACH_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Transaction_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Transaction ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Setting__c</fullName>
        <label>Payment Setting</label>
        <referenceTo>Payment_Setting__c</referenceTo>
        <relationshipLabel>ACH Transactions</relationshipLabel>
        <relationshipName>ACH_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Settlement_Id__c</fullName>
        <label>Settlement Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Scheduled: Created and not submitted
Pending: Submitted to the ACH provider, but not yet settled. 
Settled: The ACH payment was pulled successfully from the customer&apos;s account 
Failed: Returned a failed response form the ACH provider</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fees Applied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ACH Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ACH_Batch__c</columns>
        <columns>Status__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>External_Transaction_ID__c</columns>
        <columns>Response_Code__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TRN-{0000}</displayFormat>
        <label>ACH Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACH Transactions</pluralLabel>
    <recordTypes>
        <fullName>Credit</fullName>
        <active>true</active>
        <label>Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Debit</fullName>
        <active>true</active>
        <label>Debit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>